<resources>
    <string name="app_name">TapTake</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nome Completo</string>
    <string name="nav_header_subtitle">exemplo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Restaurantes</string>
    <string name="menu_profile">Editar Perfil</string>
    <string name="menu_university">Universidades</string>
    <string name="menu_cart">Carrinho</string>
    <string name="menu_requests">Pedidos</string>
    <string name="textWelcome">Seja bem-vindo!</string>
    <string name="create_account">Crie uma conta clicando aqui</string>
    <string name="login" />
    <string name="forget_password" />
    <string name="remember_me" />
    <string name="enter_phone_number" />
    <string name="email">Email</string>
    <string name="textLoginPage">LOGIN</string>
    <string name="log_in">Entrar</string>
    <string name="password">Password</string>
    <string name="textLogin">Logar</string>
    <string name="bottom2">bottom2</string>
    <string name="image2splash">Image2Splash</string>
    <string name="messageEmailError">Você precisa inserir um e-mail válido!</string>
    <string name="messagePasswordError">Você precisa inserir uma senha válida!</string>
    <string name="messageLoginError">Seu email ou senha estão incorretos!</string>
    <string name="messagePasswordErrorSecondary">Você precisa confimar sua senha!</string>
    <string name="textSignUpPage">Cadastro</string>
    <string name="signUp">Cadastrar</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="messageNameError">Você precisa inserir um nome válido!</string>
    <string name="name_restaurant">Nome Restaurante</string>
    <string name="name">Nome</string>
    <string name="save">Salvar</string>
    <string name="logo_university">logo</string>
    <string name="university_1">Pontifícia Universidade Católica do Paraná</string>
    <string name="address_puc">Endereço: R. Imac. Conceição, 1155 – Prado Velho, Curitiba – PR, 80215–901</string>
    <string name="icon_fav">icon_fav</string>
    <string name="university_2">UNICURITIBA</string>
    <string name="address_unicuritiba">Endereço: R. Chile, 1678 – Rebouças, Curitiba – PR, 80220–181</string>
    <string name="university_3">Universidade Tuiuti do Paraná</string>
    <string name="address_utp">Endereço: Rua Sydnei Antonio Rangel Santos, 238 – Santo Inácio, Curitiba – PR, 82010–330</string>
    <string name="university_4">Universidade Positivo</string>
    <string name="address_up">Endereço: R. Prof. Pedro Viriato Parigot de Souza, 5300</string>
    <string name="textschedunlig">Agendamento</string>
    <string name="textDate">Selecione uma data:</string>
    <string name="textHours">Selecione um horário:</string>
    <string name="textbuttonScheduling">Agendar Pedido</string>
    <string name="notification">notification</string>
    <string name="bannerrestaurant">bannerRestaurant</string>
    <string name="returntoprevious">returnToPreviousHomeScreen</string>
    <string name="background_image_2">background image 2</string>
    <string name="text_payment">Formas de Pagamento</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carviewrestaurant">CarViewRestaurant</string>
    <string name="name_item">Name Item</string>
    <string name="descriptionitem">Description Item</string>
    <string name="value_item">Valor: R$</string>
    <string name="imageitem">imageItem</string>
    <string name="_0">0,00</string>
    <string name="text_view_item">Visualizar Item</string>
    <string name="return_to_restaurant">retornar para o restaurante</string>
    <string name="image_item">imagem do item selecionado</string>
    <string name="text_quantity">Escolha a quantidade:</string>
    <string name="_1">1</string>
    <string name="button_add">button_add</string>
    <string name="total_payable">Total a pagar: R$</string>
    <string name="button_remove">Remover</string>
    <string name="add">Adicionar</string>
    <string name="finalizing_order">Finalizar Pedido</string>
    <string name="subtext_payment">Selecione uma forma de pagamento</string>
    <string name="delivery">Delivery</string>
    <string name="form_of_payment">Forma de pagamento</string>
    <string name="goto_carrinho">Ir para o Carrinho</string>
    <string name="value_total">Valor Total: R$</string>
    <string name="quantity_text">Quantidade de itens:</string>
    <string name="text_total_purchase_amount">Valor total da compra: R$</string>
    <string name="text_scheduling">Agendamento</string>
    <string name="text_change">Alterar</string>
    <string name="form_payment">Forma de pagamento escolhido:</string>
    <string name="none">nenhuma</string>
    <string name="restaurant_name">Nome do Restaurante:</string>
    <string name="data_item">Data do pedido:</string>
    <string name="logo_restaurant">logo restaurante</string>
    <string name="order_delivery">Pedidos para entregar:</string>
    <string name="text_value_delivery">Valor da entrega: R$</string>
    <string name="accept_delivery">Aceitar</string>
    <string name="text_timer">Tempo:</string>
</resources>