<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_restaurant_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_university"
            android:icon="@drawable/ic_menu_university"
            android:title="@string/menu_university" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_menu_requests"
            android:title="@string/menu_requests" />
        <item
            android:id="@+id/nav_delivery"
            android:icon="@drawable/ic_baseline_directions_bike_24"
            android:title="@string/delivery" />
    </group>
</menu>