<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewItemScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_view_item"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/Theme.TapTake.PopupOverlay" />

    <TextView
        android:id="@+id/name_view_item"
        android:layout_width="287dp"
        android:layout_height="46dp"
        android:text="@string/text_view_item"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_view_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/back_button_restaurant"
        android:layout_width="59dp"
        android:layout_height="45dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/return_to_restaurant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        app:tint="#FFFFFF"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="180dp"
        android:layout_height="175dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_view_item" />

    <TextView
        android:id="@+id/textNameItem"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:text="@string/name_item"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textDescriptionItem"
        android:layout_width="380dp"
        android:layout_height="171dp"
        android:layout_marginTop="4dp"
        android:justificationMode="inter_word"
        android:text="@string/descriptionitem"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameItem" />

    <TextView
        android:id="@+id/textQuantity"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/text_quantity"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescriptionItem" />

    <TextView
        android:id="@+id/quantityValue"
        android:layout_width="66dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textQuantity" />

    <ImageButton
        android:id="@+id/button_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/button_add"
        app:layout_constraintEnd_toStartOf="@+id/quantityValue"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quantityValue"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <ImageButton
        android:id="@+id/button_remove"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/button_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/quantityValue"
        app:layout_constraintTop_toTopOf="@+id/quantityValue"
        app:srcCompat="@drawable/ic_baseline_horizontal_rule_24" />

    <TextView
        android:id="@+id/text_total_payable"
        android:layout_width="133dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_payable"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityValue" />

    <TextView
        android:id="@+id/text_value_payable"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityValue" />

    <Button
        android:id="@+id/button_GoToScheduling"
        android:layout_width="294dp"
        android:layout_height="60dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#ffb500"
        android:text="@string/add"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_value_payable"
        app:layout_constraintVertical_bias="0.132" />


</androidx.constraintlayout.widget.ConstraintLayout>