<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/fundoSignUp"
        android:layout_width="403dp"
        android:layout_height="852dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/fundo"
        tools:ignore="ContentDescription" />


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="512dp"
        android:layout_height="656dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/fundoSignUp"
        app:layout_constraintEnd_toEndOf="@+id/fundoSignUp"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fundoSignUp"
        app:layout_constraintVertical_bias="0.387"
        app:srcCompat="@drawable/fundologoloagind"
        android:contentDescription="@string/background_image_2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="389dp"
        android:layout_height="83dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/textSignUpPage"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fundoSignUp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="303dp"
        android:layout_height="63dp"
        android:background="@drawable/edit_text"
        android:drawableEnd="@drawable/ic_baseline_account_box_24"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.705"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_email_address"
        android:layout_width="303dp"
        android:layout_height="63dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/edit_text"
        android:drawableEnd="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.453"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="304dp"
        android:layout_height="68dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/edit_text"
        android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_password_confirm"
        android:layout_width="304dp"
        android:layout_height="68dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/edit_text"
        android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/buttonCadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textErrorName"
        android:layout_width="300dp"
        android:layout_height="29dp"
        android:text="@string/messageNameError"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textErrorEmail"
        android:layout_width="300dp"
        android:layout_height="29dp"
        android:text="@string/messageEmailError"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email_address"
        app:layout_constraintVertical_bias="0.521" />

    <TextView
        android:id="@+id/text_error_password"
        android:layout_width="300dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:text="@string/messagePasswordError"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_error_password_confirm"
        android:layout_width="300dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:text="@string/messagePasswordErrorSecondary"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password_confirm" />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="294dp"
        android:layout_height="68dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#ffb500"
        android:text="@string/signUp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

